AC_INIT([pcap_dump],[0.1])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_CXX
AC_CHECK_HEADER_STDBOOL
AC_CHECK_FUNCS([inet_ntoa memmove strchr strdup strstr])
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h])
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
PKG_CHECK_MODULES([JSON], [json-glib-1.0 >= 0.14])
AM_MAINTAINER_MODE
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES(Makefile)
AC_OUTPUT

